--- a/public/login.css
+++ b/public/login.css
@@ -11,7 +11,8 @@ h1 {
 label {
     color: white;
     font-size: 150%;
-    align-items: left;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 body {
@@ -21,10 +22,6 @@ body {
 img {
     height: 600px;
     text-align: left;
-}
-
-.content {
-    font-size: 10px;
 }
 
 .loginpage {
@@ -59,9 +56,16 @@ fieldset {
 
 input{
     width: 150%;
+    margin-bottom: 10px;
+}
+
+input[type="checkbox"]{
+    margin-left: -150px;
 }
 
 input[type="submit"] {
-    width: 60%;
+    width: 50%;
+    margin: auto;
+    margin-left: 100px;
 }
   
