--- a/public/app.css
+++ b/public/app.css
@@ -1,5 +1,5 @@
 .guest-background {
-    background-image: url("./img/guest_background.jpg");
+    background-image: url("./storage/asset/img/login register.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 1000px;
